--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700;900&family=Space+Mono:wght@400;700&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --black: #FFFFFF;
-            --white: #000000;
+            --black: #000000;
+            --white: #FFFFFF;
             --gray-100: #F5F5F5;
             --gray-200: #E5E5E5;
             --gray-300: #D4D4D4;
