--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             --border-dark: #000000;
             
             /* 差し色 */
-            --accent-primary: #FF453A;
-            --accent-secondary: #0A84FF;
+            --accent-primary: #D741A7;
+            --accent-secondary: #5398BE;
         }
         
         * {
