--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             --border-dark: #000000;
             
             /* 差し色 */
-            --accent-primary: #D741A7;
-            --accent-secondary: #5398BE;
+            --accent-primary: #d741a7;
+            --accent-secondary: #5398Be;
         }
         
         * {
